
Changelog
=========

2018.5.0 (unreleased)
---------------------

- Fix bug in Windows8/10 and IE11/Edge: Select a task-reminder option will now properly stop spinning. [elioschmutz]
- Show the task-reminder selector spinner directly and not only on long-requests to remove complexity. [elioschmutz]
- Set \emergencystretch to 3em in latex templates. [njohner]
- Update schemas in API documentation to include "changed". [njohner]
- Ignore unauthorized traversal request in the response forms. [phgross]
- Don't display the reminder selector on tasks where it would not work. [Rotonen]
- Translate status message type in forms. [njohner]
- Skip check that tasks and documents are in a subdossier when resolving a subdossier. [njohner]
- Add Open XML Visio mimetypes. [deiferni]
- Bump ftw.bumblebee to 3.7.0 for new derived secrets for the demand endpoint. [deiferni]
- Fix issue when returning an excerpt to an already decided proposal. [njohner]
- Fix data in Task PDF when resolving a dossier. [njohner]
- Make save as pdf button colored green. [deiferni]
- Only show proposal notification settings when meeting feature is enabled. [deiferni]
- Use opaque_id instead of get parameter in SavePDFDocumentUnder. [njohner]
- Display group label in teamdetails instead of group title. [njohner]
- Prevent shadow documents from being relatable. [Rotonen]
- Do not open keywordwidget when autofocusing the first form field. [phgross]
- Add reference numbers to protected items admin view links. [Rotonen]
- Sort repository excel exports by reference number. [Rotonen]
- Allow managers to deactivate a dossier. [njohner]
- Bump ftw.contentstats to get disk usage logging. [lgraf]
- Whitelist "recently touched" data structures from CSRF write protection. [lgraf]
- Bump docxcompose to 1.0.0a13 to get a numberig restart bugfix. [deiferni]
- Make the changed field a python datetime. [njohner]
- Fix Officeconnector permission checks for task documents tab actions. [Rotonen]