@@ -7,6 +7,7 @@ from opengever.ogds.base.sources import AllUsersInboxesAndTeamsSourceBinder
 from opengever.ogds.base.utils import get_current_org_unit
 from opengever.ogds.base.utils import get_ou_selector
 from opengever.task import _ as task_mf
+from opengever.task import is_private_task_feature_enabled
 from opengever.task.task import ITask
 from opengever.task.task import Task
 from opengever.task.util import update_reponsible_field_data
@@ -165,6 +166,12 @@ class ForwardingAddForm(add.DefaultAddForm):
                 )
 
         super(ForwardingAddForm, self).update()
+
+        # Disable is_private field according to the feature flag
+        if not is_private_task_feature_enabled():
+            common_group = next(
+                group for group in self.groups if group.__name__ == u'common')
+            common_group.widgets['is_private'].mode = HIDDEN_MODE
 
     def updateFieldsFromSchemata(self):
         super(ForwardingAddForm, self).updateFieldsFromSchemata()
